# opym

./: CMakeLists.txt
applications/: CMakeLists.txt  list-wells.py
src/: opym.cpp
tests/: CMakeLists.txt  eclipsestate.py  parsecontext.py
